--- a/src/peerblock/pb_icl12.vcxproj
+++ b/src/peerblock/pb_icl12.vcxproj
@@ -173,6 +173,7 @@
       <DataExecutionPrevention>
       </DataExecutionPrevention>
       <TargetMachine>MachineX86</TargetMachine>
+      <MinimumRequiredVersion>5.01</MinimumRequiredVersion>
     </Link>
     <Manifest>
       <AdditionalManifestFiles>peerblock.manifest</AdditionalManifestFiles>
@@ -208,6 +209,7 @@
       <AssemblyDebug>true</AssemblyDebug>
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX64</TargetMachine>
+      <MinimumRequiredVersion>5.02</MinimumRequiredVersion>
     </Link>
     <Manifest>
       <AdditionalManifestFiles>peerblock.manifest</AdditionalManifestFiles>
@@ -231,6 +233,7 @@
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
       <ImageHasSafeExceptionHandlers>true</ImageHasSafeExceptionHandlers>
+      <MinimumRequiredVersion>5.01</MinimumRequiredVersion>
     </Link>
     <Manifest>
       <AdditionalManifestFiles>peerblock.manifest</AdditionalManifestFiles>
@@ -257,6 +260,7 @@
       <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX64</TargetMachine>
+      <MinimumRequiredVersion>5.02</MinimumRequiredVersion>
     </Link>
     <Manifest>
       <AdditionalManifestFiles>peerblock.manifest</AdditionalManifestFiles>
@@ -284,6 +288,7 @@
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
       <ImageHasSafeExceptionHandlers>true</ImageHasSafeExceptionHandlers>
+      <MinimumRequiredVersion>6.0</MinimumRequiredVersion>
     </Link>
     <Manifest>
       <AdditionalManifestFiles>peerblock.manifest</AdditionalManifestFiles>
@@ -310,6 +315,7 @@
       <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX64</TargetMachine>
+      <MinimumRequiredVersion>6.0</MinimumRequiredVersion>
     </Link>
     <Manifest>
       <AdditionalManifestFiles>peerblock.manifest</AdditionalManifestFiles>
@@ -350,6 +356,7 @@
       <DataExecutionPrevention>
       </DataExecutionPrevention>
       <TargetMachine>MachineX86</TargetMachine>
+      <MinimumRequiredVersion>6.0</MinimumRequiredVersion>
     </Link>
     <Manifest>
       <AdditionalManifestFiles>peerblock.manifest</AdditionalManifestFiles>
@@ -385,6 +392,7 @@
       <AssemblyDebug>true</AssemblyDebug>
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX64</TargetMachine>
+      <MinimumRequiredVersion>6.0</MinimumRequiredVersion>
     </Link>
     <Manifest>
       <AdditionalManifestFiles>peerblock.manifest</AdditionalManifestFiles>
